--- a/tests/events.html
+++ b/tests/events.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 
-  <script type="text/javascript" src="jsunit.js"></script>
-  <script type="text/javascript" src="../compat/array.js"></script>
-  <script type="text/javascript" src="../compat/core.js"></script>
-  <script type="text/javascript" src="../compat/events.js"></script>
-  <script type="text/javascript" src="../compat/element.js"></script>
+<script type="text/javascript" src="jsunit.js"></script>
+<script type="text/javascript" src="loader.js"></script>
+<script type="text/javascript">
+load_compat('..');
+</script>
 
 <script type="text/javascript">
 
