--- a/tests/selectors.html
+++ b/tests/selectors.html
@@ -3,11 +3,6 @@
 <head>
 </head>
 <body>
-  <script type="text/javascript" src="jsunit.js"></script>
-  <script type="text/javascript" src="../compat/array.js"></script>
-  <script type="text/javascript" src="../compat/core.js"></script>
-  <script type="text/javascript" src="../compat/element.js"></script>
-  <script type="text/javascript" src="../compat/selectors.js"></script>
 
   <div id="test" class="test">test</div>
   <div id="toto" class="toto">
@@ -15,6 +10,12 @@
   </div>
   
   <input type="text" name="titi" style="display:none"/>
+
+<script type="text/javascript" src="jsunit.js"></script>
+<script type="text/javascript" src="loader.js"></script>
+<script type="text/javascript">
+load_compat('..');
+</script>
 
 <script type="text/javascript">
 
