--- a/tests/style.html
+++ b/tests/style.html
@@ -15,13 +15,14 @@
     <button id="btn" name="btn">click me</button>
   </p>
 
-<script type="text/javascript" src="../compat/core.js"></script>
-<script type="text/javascript" src="../compat/events.js"></script>
 
-<script type="text/javascript" src="../addons/string.js"></script>
-<script type="text/javascript" src="../addons/style.js"></script>
+<script type="text/javascript" src="loader.js"></script>
+<script type="text/javascript">
+load_compat('..');
+load_addons('..');
+</script>
 
-<script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script>
+<!--script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script-->
 
 <script type="text/javascript">
 
