--- a/tests/ui/tooltip.html
+++ b/tests/ui/tooltip.html
@@ -56,27 +56,12 @@
   <button class="bottom left">bottom left</button>
 </p>
 
-<script type="text/javascript" src="../../compat/array.js"></script>
-<script type="text/javascript" src="../../compat/core.js"></script>
-<script type="text/javascript" src="../../compat/element.js"></script>
-<script type="text/javascript" src="../../compat/events.js"></script>
-<script type="text/javascript" src="../../compat/selectors.js"></script>
-<script type="text/javascript" src="../../compat/json2.js"></script>
-<script type="text/javascript" src="../../compat/xmlhttprequest.js"></script>
-
-<script type="text/javascript" src="../../addons/object.js"></script>
-<script type="text/javascript" src="../../addons/function.js"></script>
-<script type="text/javascript" src="../../addons/array.js"></script>
-<script type="text/javascript" src="../../addons/string.js"></script>
-<script type="text/javascript" src="../../addons/classname.js"></script>
-<script type="text/javascript" src="../../addons/element.js"></script>
-<script type="text/javascript" src="../../addons/style.js"></script>
-<script type="text/javascript" src="../../addons/ajax.js"></script>
-
-<script type="text/javascript" src="../../ui/ui.js"></script>
-<script type="text/javascript" src="../../ui/window.js"></script>
-<script type="text/javascript" src="../../ui/picker.js"></script>
-<script type="text/javascript" src="../../ui/tooltip.js"></script>
+<script type="text/javascript" src="../loader.js"></script>
+<script type="text/javascript">
+load_compat('../..');
+load_addons('../..');
+load_ui('../..');
+</script>
 
 <!--script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script-->
 <script type="text/javascript">
