--- a/tests/elements.html
+++ b/tests/elements.html
@@ -5,10 +5,11 @@
 <body>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <script type="text/javascript" src="jsunit.js"></script>
-  <script type="text/javascript" src="../compat/array.js"></script>
-  <script type="text/javascript" src="../compat/core.js"></script>
-  <script type="text/javascript" src="../compat/element.js"></script>
-  <script type="text/javascript" src="../addons/element.js"></script>
+  <script type="text/javascript" src="loader.js"></script>
+  <script type="text/javascript">
+  load_compat('..');
+  load_addons('..');
+  </script>
 
   <div id="test">test</div>
   <div id="toto">
