--- a/tests/style_opacity.html
+++ b/tests/style_opacity.html
@@ -16,11 +16,12 @@
   this is some content
 </p>
 
-<script type="text/javascript" src="../compat/array.js"></script>
-<script type="text/javascript" src="../compat/core.js"></script>
 
-<script type="text/javascript" src="../addons/string.js"></script>
-<script type="text/javascript" src="../addons/style.js"></script>
+<script type="text/javascript" src="loader.js"></script>
+<script type="text/javascript">
+load_compat('..');
+load_addons('..');
+</script>
 
 <script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script>
 <script type="text/javascript">
