--- a/tests/tests.html
+++ b/tests/tests.html
@@ -10,8 +10,11 @@
     <button id="btn" name="btn">click me (or mouse me over)</button>
   </p>
 
-<script type="text/javascript" src="../compat/core.js"></script>
-<script type="text/javascript" src="../compat/events.js"></script>
+
+<script type="text/javascript" src="loader.js"></script>
+<script type="text/javascript">
+load_compat('..');
+</script>
 
 <script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script>
 <script type="text/javascript">
