--- a/tests/addons/style.html
+++ b/tests/addons/style.html
@@ -3,10 +3,9 @@
 <head>
   <title>Some manual event tests</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	
   <style type="text/css">
-  
   #container { background-color: #FEA; text-align: center; }
-  
   </style>
 </head>
 <body>
@@ -16,10 +15,10 @@
   </p>
 
 
-<script type="text/javascript" src="loader.js"></script>
+<script type="text/javascript" src="../loader.js"></script>
 <script type="text/javascript">
-load_compat('..');
-load_addons('..');
+load_compat('../..');
+load_addons('../..');
 </script>
 
 <!--script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script-->
