--- a/tests/addons/style_opacity.html
+++ b/tests/addons/style_opacity.html
@@ -17,10 +17,10 @@
 </p>
 
 
-<script type="text/javascript" src="loader.js"></script>
+<script type="text/javascript" src="../loader.js"></script>
 <script type="text/javascript">
-load_compat('..');
-load_addons('..');
+load_compat('../..');
+load_addons('../..');
 </script>
 
 <script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script>
