Refactored UI.ColorPicker. Fixed some TODOs.

--- a/tests/ui/color_picker.html
+++ b/tests/ui/color_picker.html
@@ -22,10 +22,10 @@
   .color-picker .hue         { position: absolute; top: 0; left: 0; }
   .color-picker .slider      { position: absolute; /*top: 7.5px;*/ left: -5px; }
 
-  .color-picker .color     { position: absolute; top: 170px; left: 10px; width: 90px; height: 15px;
+  .color-picker .preview { position: absolute; top: 170px; left: 10px; width: /*90px*/ 173px; height: 15px;
 	  border: 1px solid #000; background: #000; }
-  .color-picker input      { position: absolute; top: 170px; left: 110px; display: block; font-size: 11px;
-	  width: 75px; height: 13px; border: 1px inset #666; background: #FFF; color: #333; }
+  /*.color-picker input { position: absolute; top: 170px; left: 110px; display: block; font-size: 11px;
+	  width: 75px; height: 13px; border: 1px inset #666; background: #FFF; color: #333; }*/
 	
   </style>
 </head>
