Refactored addons/fx.

--- a/tests/fx/fx.html
+++ b/tests/fx/fx.html
@@ -24,9 +24,9 @@
 <script type="text/javascript">
 
 var tata = document.getElementById('tata');
-//tata.fx({'width': [0, 500], 'height': 200, 'opacity': [0, 1.0]}, 1000);
-tata.fx({'width': [500, 40], 'height': 200, 'opacity': [1.0, 1.0], 'background-color': [new Color('#F00'), new Color('#00F')]}, 500);
-//tata.fx({'background-color': [new Color('#F00'), new Color('#00F')]}, 1000);
+tata.fx({'width': [0, 500], 'height': 200, 'opacity': [0, 1.0]}, {duration: 1000});
+//tata.fx({'width': [500, 40], 'height': 200, 'opacity': [1.0, 1.0], 'background-color': [new Color('#F00'), new Color('#00F')]}, {duration: 500});
+//tata.fx({'background-color': [new Color('#F00'), new Color('#00F')]}, {duration: 1000});
 
 </script>
 
