--- a/tests/ui/autocompleter.html
+++ b/tests/ui/autocompleter.html
@@ -20,9 +20,11 @@
 </head>
 <body>
 
-<p>
-  <input type="text" name="autocomplete" id="autocomplete"/>
-</p>
+<form method="get" action="#">
+  <p>
+    <input type="text" name="autocomplete" id="autocomplete" autocomplete="off"/>
+  </p>
+</form>
 
 
 <script type="text/javascript" src="../loader.js"></script>
