Added README for Kokone::HTML5. Placeholder text is now removed before form submission.

--- a/tests/html5/placeholder.html
+++ b/tests/html5/placeholder.html
@@ -16,6 +16,9 @@
       <input type="text" name="some_text" placeholder="Login"/>
       <input type="password" name="some_password" placeholder="Password"/>
     </p>
+    <p>
+      <input type="submit"/>
+    </p>
   </form>
   
   <script type="text/javascript" src="../jsunit.js"></script>
