Added a check for placeholder support.

--- a/tests/html5/placeholder.html
+++ b/tests/html5/placeholder.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <style type="text/css">
-  .placeholder { color: #666; }
+  .placeholder { color: #666; font-style: italic; }
   </style>
 </head>
 <body>
