Refactored UI.Window & descendents.

--- a/tests/ui/dialog.html
+++ b/tests/ui/dialog.html
@@ -23,18 +23,21 @@
     border: 1px solid; border-top-color: #888; border-left-color: #888;
     border-right-color: #BBB; border-bottom-color: #BBB; }
   
-  p + p { margin: 300px 0 0; }
+  p.second { margin: 300px 0 0; }
   
   </style>
 </head>
 <body>
 
 <p>
-  <button class="open-dialog">click-me</button>
+  <button id="modal-dialog">click-me</button>
 </p>
 
-<p>
-  <button class="open-dialog">click-me</button>
+<p class="second">
+  <button id="open-dialog">click-me</button>
+  <select name="a">
+    <option>Stupid select that shouldn't appear on top of the window in IE6<option>
+  </select>
 </p>
 
 <p>&nbsp;</p>
@@ -49,21 +52,29 @@ load_ui('../..');
 <!--script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script-->
 <script type="text/javascript">
 
-var buttons = document.getElementsByClassName('open-dialog');
-Array.prototype.forEach.call(buttons, function(button)
+document.getElementById('modal-dialog').addEventListener('click', function()
 {
-  button.addEventListener('click', function()
-  {
-    var dialog = new UI.Dialog({modal: true, position: ['center', 'middle']});
-    dialog.setTitle('File Manager');
-    
-    var p = document.createElement('p');
-    p.innerHTML = 'this is some content';
-    dialog.setContent(p);
-    
-    dialog.display();
-  }, false);
-});
+  var dialog = new UI.Dialog({modal: true, position: ['top', 'middle']});
+  dialog.setTitle('File Manager');
+  
+  var p = document.createElement('p');
+  p.innerHTML = 'this is some content';
+  dialog.setContent(p);
+  
+  dialog.display();
+}, false);
+
+document.getElementById('open-dialog').addEventListener('click', function()
+{
+  var dialog = new UI.Dialog({modal: false, position: ['center', 'middle']});
+  dialog.setTitle('File Manager');
+  
+  var p = document.createElement('p');
+  p.innerHTML = 'this is some content';
+  dialog.setContent(p);
+  
+  dialog.display();
+}, false);
 
 </script>
 
