--- a/tests/ui/notification.html
+++ b/tests/ui/notification.html
@@ -6,17 +6,27 @@
   <style type="text/css">
   
   body { font: normal 12px/1.5 lucida grande, verdana, sans-serif; background: #07A; }
-  body > p { text-align: right; }
+  body p { text-align: right; }
   /*
   body > p { height: 2000px; width: 2000px; position: relative; }
   body > p button { position: absolute; bottom: 0; right: 0; }
   */
-  
+  /*
   .notification { position: fixed; top: 1.5em; right: 1.5em; }
   .notification .background { background: #000; opacity: .75;
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
     filter: alpha(opacity=75); -moz-border-radius: 4px; -webkit-border-radius: 4px; }
   .notification .content { position: relative; padding: 1.5em; color: #FFF; font-weight: bold; }
+  */
+  .notification { position: fixed; top: 1.5em; right: 1.5em;
+    -moz-border-radius: 4px; -webkit-border-radius: 4px;
+    padding: 1.5em; color: #FFF; font-weight: bold;
+    background: #000;
+    background: rgba(0, 0, 0, 0.75);
+    _background: transparent;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
+  }
   
   </style>
 </head>
