Moved things around and renamed the project to Alpha.

--- a/tests/events/mouseenter.html
+++ b/tests/events/mouseenter.html
@@ -20,7 +20,7 @@
 
 <script type="text/javascript" src="../loader.js"></script>
 <script type="text/javascript">
-load_compat('../..');
+load_alpha('../..');
 
 var a = document.getElementById('a');
 var b = document.getElementById('b');
