--- a/tests/fx/boxshadow.html
+++ b/tests/fx/boxshadow.html
@@ -26,7 +26,7 @@ body { background: #88F; }
   
 <script type="text/javascript" src="../jsunit.js"></script>
 <script type="text/javascript" src="../loader.js"></script>
-<script type="text/javascript">load_compat('../..');</script>
+<script type="text/javascript">load_alpha('../..');</script>
 <script type="text/javascript">load_addons('../..');</script>
 
 <script type="text/javascript">
