--- a/tests/addons/color.html
+++ b/tests/addons/color.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="../jsunit.js"></script>
 <script type="text/javascript" src="../loader.js"></script>
 <script type="text/javascript">
-load_compat('../..');
+load_alpha('../..');
 load_addons('../..');
 </script>
 
@@ -22,50 +22,50 @@ load_addons('../..');
 
 jsUnit.add('#FFF', function()
 {
-  var color = new Color('#FFF');
+  var color = new Alpha.Color('#FFF');
   jsUnit.assertTrue(color.r == 255 && color.g == 255 && color.b == 255
     && color.h == 0 && color.s == 0 && color.v == 100);
 });
 
 jsUnit.add('#00000A', function()
 {
-  var color = new Color('#00000A');
+  var color = new Alpha.Color('#00000A');
   jsUnit.assertTrue(color.r == 0 && color.g == 0 && color.b == 10
     && color.h == 60 && color.s == 100 && color.v == 4);
 });
 
 jsUnit.add('rgb(0, 0, 0)', function()
 {
-  var color = new Color('rgb(0, 0, 0)');
+  var color = new Alpha.Color('rgb(0, 0, 0)');
   jsUnit.assertTrue(color.r == 0 && color.g == 0 && color.b == 0
     && color.h == 0 && color.s == 0 && color.v == 0);
 });
 
 jsUnit.add('rgba(127, 0, 0, 0.75)', function()
 {
-  var color = new Color('rgba(127, 0, 0, 0.75)');
+  var color = new Alpha.Color('rgba(127, 0, 0, 0.75)');
   jsUnit.assertTrue(color.r == 127 && color.g == 0 && color.b == 0 && color.a == 0.75
     && color.h == 0 && color.s == 100 && color.v == 50);
 });
 
 jsUnit.add('toRGB', function()
 {
-  var color = new Color('#FFC');
+  var color = new Alpha.Color('#FFC');
   jsUnit.assertEquals(color.toRGB(), 'rgb(255, 255, 204)');
 });
 
 jsUnit.add('toRGBA', function()
 {
-  var color = new Color('#FFCFFC');
+  var color = new Alpha.Color('#FFCFFC');
   jsUnit.assertEquals(color.toRGBA(), 'rgba(255, 207, 252, 1)');
 
-  var color = new Color('rgb(0, 0, 0, 0.25)');
+  var color = new Alpha.Color('rgb(0, 0, 0, 0.25)');
   jsUnit.assertEquals(color.toRGBA(), 'rgba(0, 0, 0, 0.25)');
 });
 
 jsUnit.add('toString', function()
 {
-  var color = new Color('#FFCFFC');
+  var color = new Alpha.Color('#FFCFFC');
   jsUnit.assertEquals(color.toString(), '#FFCFFC');
 });
 
