--- a/tests/addons/style.html
+++ b/tests/addons/style.html
@@ -17,7 +17,7 @@
 
 <script type="text/javascript" src="../loader.js"></script>
 <script type="text/javascript">
-load_compat('../..');
+load_alpha('../..');
 load_addons('../..');
 </script>
 
