--- a/tests/addons/style_opacity.html
+++ b/tests/addons/style_opacity.html
@@ -19,7 +19,7 @@
 
 <script type="text/javascript" src="../loader.js"></script>
 <script type="text/javascript">
-load_compat('../..');
+load_alpha('../..');
 load_addons('../..');
 </script>
 
