--- a/tests/core.html
+++ b/tests/core.html
@@ -14,7 +14,7 @@
 
 <script type="text/javascript" src="jsunit.js"></script>
 <script type="text/javascript" src="loader.js"></script>
-<script type="text/javascript">load_compat('..');</script>
+<script type="text/javascript">load_alpha('..');</script>
 
 <script type="text/javascript">
 
