--- a/tests/events.html
+++ b/tests/events.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="jsunit.js"></script>
 <script type="text/javascript" src="loader.js"></script>
 <script type="text/javascript">
-load_compat('..');
+load_alpha('..');
 </script>
 
 <script type="text/javascript">
@@ -25,7 +25,7 @@ function new_input()
   return input;
 }
 
-var _event_type = kokone.browser.ie ? 'click' : 'focus';
+var _event_type = Alpha.browser.ie ? 'click' : 'focus';
 
 
 jsUnit.add("Event must be prototyped", function() {
