--- a/tests/html5/placeholder.html
+++ b/tests/html5/placeholder.html
@@ -24,7 +24,7 @@
   <script type="text/javascript" src="../jsunit.js"></script>
   <script type="text/javascript" src="../loader.js"></script>
   <script type="text/javascript">
-  load_compat('../..');
+  load_alpha('../..');
   load_addons('../..');
   load_html5('../..');
   </script>
