--- a/tests/html5/webstorage.html
+++ b/tests/html5/webstorage.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="../jsunit.js"></script>
   <script type="text/javascript" src="../loader.js"></script>
   <script type="text/javascript">
-  load_compat('../..');
+  load_alpha('../..');
   load_html5('../..');
   </script>
   
