--- a/tests/query_selectors.html
+++ b/tests/query_selectors.html
@@ -34,7 +34,7 @@
 <script type="text/javascript" src="jsunit.js"></script>
 <script type="text/javascript" src="loader.js"></script>
 <script type="text/javascript">
-load_compat('..');
+load_alpha('..');
 </script>
 
 <!--script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script-->
