--- a/tests/selectors.html
+++ b/tests/selectors.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="jsunit.js"></script>
 <script type="text/javascript" src="loader.js"></script>
 <script type="text/javascript">
-load_compat('..');
+load_alpha('..');
 </script>
 
 <script type="text/javascript">
