--- a/tests/ui/autoresize.html
+++ b/tests/ui/autoresize.html
@@ -24,7 +24,7 @@
 
 <script type="text/javascript" src="../loader.js"></script>
 <script type="text/javascript">
-load_compat('../..');
+load_alpha('../..');
 load_addons('../..');
 load_ui('../..');
 </script>
