HTML5 datalist no longer filters entries (that's not its job). It also hides on blur (using a timeout in order for clicking a choice to still work).

--- a/tests/html5/datalist.html
+++ b/tests/html5/datalist.html
@@ -6,17 +6,14 @@
   <style type="text/css">
   body, input { font: normal 14px/1.5 helvetica, arial, sans-serif; }
   input { border: 1px solid #888; padding: 2px; }
-
+  
   .placeholder { color: #666; font-style: italic; }
   
-  .datalist { border: 1px solid #888;
-    -moz-box-shadow: 1px 1px 2px #888; -webkit-box-shadow: 1px 1px 2px #888; box-shadow: 1px 1px 2px #888;
-    list-style: none; padding: 0; margin: -1px 0 0; }
+  .datalist { border: 1px solid #888; list-style: none; padding: 0; margin: -1px 0 0;
+    -moz-box-shadow: 2px 2px 8px #888; -webkit-box-shadow: 2px 2px 8px #888; box-shadow: 2px 2px 8px #888; }
   .datalist li { padding: 1px 2px; background: #FFF; }
   .datalist li:hover { background: #E4E4E4; }
   .datalist li.selected { background: #CCC; }
-  
-  .datalist { font-size: 12px; }
   </style>
 </head>
 <body>
