--- a/tests/html5/datalist.html
+++ b/tests/html5/datalist.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+  <title>HTML5: datalist</title>
 	<!--[if IE]>
 	  <script type="text/javascript">document.createElement('datalist')</script>
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
