Refactored UI.Autocompleter which is now based on UI.ListPicker.

--- a/tests/ajax/autocompleter.html
+++ b/tests/ajax/autocompleter.html
@@ -1,3 +1,3 @@
-<li>AAA</li>
-<li>BB BB B</li>
-<li>CC</li>
+<li data-value="2">Jules</li>
+<li data-value="1">Julian</li>
+<li data-value="3">Julien</li>
