Renamed the Alpha.UI namespace to the simpler UI namespace.

--- a/test/ui/autocompleter.html
+++ b/test/ui/autocompleter.html
@@ -25,7 +25,7 @@ load_ui('../..');
 
 <!--script type="text/javascript" src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script-->
 <script type="text/javascript">
-var autocompleter = new Alpha.UI.Autocompleter(document.getElementById('user_name'), {
+var autocompleter = new UI.Autocompleter(document.getElementById('user_name'), {
   url: '../ajax/autocompleter.html',
   minChars: 1
 });
