--- a/test/ui/datalist_autocompleter.html
+++ b/test/ui/datalist_autocompleter.html
@@ -70,8 +70,8 @@ load_html5('../..');
 </script>
 
 <script type="text/javascript">
-new Alpha.UI.LocalDatalistAutocompleter(document.getElementById('capital'));
-new Alpha.UI.RemoteDatalistAutocompleter(document.getElementById('user'), {
+new UI.LocalDatalistAutocompleter(document.getElementById('capital'));
+new UI.RemoteDatalistAutocompleter(document.getElementById('user'), {
   url: "../ajax/datalist.html", param: "user_name"});
 </script>
 
