--- a/test/ui/notification.html
+++ b/test/ui/notification.html
@@ -13,10 +13,9 @@
   */
   
   .notification { position: fixed; top: 1.5em; right: 1.5em;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px;
+    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
     padding: 1.5em; color: #FFF; font-weight: bold;
-    background: #000;
-    background: rgba(0, 0, 0, 0.75);
+    background: #000; background: rgba(0, 0, 0, 0.75);
     _background: transparent;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
