Modified events test page.

--- a/test/events.html
+++ b/test/events.html
@@ -3,19 +3,18 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<link rel="stylesheet" type="text/css" href="base.css"/>
+	
+  <script type="text/javascript" src="unit.js"></script>
+  <script type="text/javascript" src="loader.js"></script>
+  <script type="text/javascript">
+  load_alpha('..');
+  </script>
 </head>
 <body>
 
 <h1>DOM Events</h1>
 
-<script type="text/javascript" src="unit.js"></script>
-<script type="text/javascript" src="loader.js"></script>
-<script type="text/javascript">
-load_alpha('..');
-</script>
-
-<script src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script>
-
+<!--script src="http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js"></script-->
 <script type="text/javascript">
 
 new Unit.TestCase('events',
